@@ -1,0 +1,3 @@
+package test.defaultmethods;
+
+public class TestB extends TestA {}
